Bug 1589961 - Improve UI alignment in Request Blocking pane, align with XHR Breakpoints style; r=Honza
Differential Revision: https://phabricator.services.mozilla.com/D49859

UltraBlame original commit: f382b51132cc0d872b5df3b5ffea9fea37018323

--- a/devtools/client/netmonitor/src/assets/styles/RequestBlockingPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/RequestBlockingPanel.css
@@ -83,6 +83,156 @@ height
 }
 /
 *
+Override
+the
+devtools
+-
+checkbox
+style
+to
+improve
+hit
+area
+and
+alignment
+*
+/
+.
+request
+-
+blocking
+-
+panel
+.
+devtools
+-
+checkbox
+-
+label
+{
+display
+:
+inline
+-
+flex
+;
+align
+-
+items
+:
+center
+;
+gap
+:
+4px
+;
+margin
+:
+0
+;
+padding
+:
+2px
+4px
+;
+/
+*
+checkbox
+can
+be
+13px
+14px
+or
+16px
+depending
+on
+the
+platform
+*
+/
+line
+-
+height
+:
+16px
+;
+user
+-
+select
+:
+none
+;
+cursor
+:
+default
+;
+}
+.
+request
+-
+blocking
+-
+panel
+.
+devtools
+-
+checkbox
+-
+label
+>
+input
+{
+flex
+:
+none
+;
+margin
+:
+0
+;
+}
+.
+request
+-
+blocking
+-
+panel
+.
+request
+-
+blocking
+-
+label
+{
+flex
+:
+1
+1
+auto
+;
+display
+:
+block
+;
+white
+-
+space
+:
+nowrap
+;
+overflow
+:
+hidden
+;
+text
+-
+overflow
+:
+ellipsis
+;
+}
+/
+*
 The
 "
 Enable
@@ -120,14 +270,46 @@ toolbar
 background
 )
 ;
+height
+:
+calc
+(
+var
+(
+-
+-
+theme
+-
+toolbar
+-
+height
+)
++
+1px
+)
+;
 padding
+-
+block
 :
 2px
-10px
+;
+padding
+-
+inline
+:
+16px
+4px
 ;
 display
 :
 flex
+;
+align
+-
+items
+:
+center
 ;
 overflow
 :
@@ -223,53 +405,6 @@ blocking
 -
 enable
 -
-form
-label
-{
-display
-:
-inline
--
-block
-;
-}
-.
-network
--
-monitor
-.
-request
--
-blocking
--
-enable
--
-bar
-.
-request
--
-blocking
--
-label
-{
-user
--
-select
-:
-none
-;
-}
-.
-network
--
-monitor
-.
-request
--
-blocking
--
-enable
--
 bar
 button
 :
@@ -301,22 +436,6 @@ svg
 ;
 }
 .
-network
--
-monitor
-.
-request
--
-blocking
--
-label
-{
-cursor
-:
-default
-;
-}
-.
 request
 -
 blocking
@@ -333,7 +452,21 @@ bottom
 ;
 top
 :
-26px
+calc
+(
+var
+(
+-
+-
+theme
+-
+toolbar
+-
+height
+)
++
+1px
+)
 ;
 left
 :
@@ -374,24 +507,8 @@ margin
 ;
 padding
 :
+4px
 0
-;
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
 ;
 width
 :
@@ -411,24 +528,28 @@ blocking
 list
 li
 {
-padding
-:
-2px
-10px
-;
 display
 :
 flex
 ;
-overflow
-:
-hidden
-;
-white
+align
 -
-space
+items
 :
-nowrap
+center
+;
+min
+-
+height
+:
+20px
+;
+padding
+-
+inline
+:
+16px
+8px
 ;
 }
 .
@@ -453,22 +574,129 @@ item
 {
 padding
 :
-1px
 0
 ;
-}
-.
-network
+/
+*
+Text
+input
+is
+24px
+but
+we
+want
+it
+to
+occupy
+the
+same
+space
+as
+our
+20px
+rows
+*
+/
+margin
 -
-monitor
+block
+:
+-
+2px
+;
+}
 .
 request
 -
 blocking
 -
 list
+.
+devtools
+-
+checkbox
+-
 label
 {
+flex
+:
+1
+1
+auto
+;
+/
+*
+Can
+'
+t
+seem
+to
+make
+the
+flex
+-
+shrink
+reduce
+the
+element
+'
+s
+width
+when
+the
+content
+is
+a
+long
+URL
+even
+if
+the
+URL
+container
+has
+text
+-
+overflow
+:
+ellipsis
+.
+DevTools
+shows
+that
+"
+the
+item
+was
+clamped
+to
+its
+minimum
+size
+"
+and
+the
+shrink
+part
+is
+thus
+ignored
+.
+So
+we
+'
+re
+reserving
+20px
+for
+the
+delete
+button
+.
+*
+/
+max
+-
 width
 :
 calc
@@ -476,18 +704,8 @@ calc
 100
 %
 -
-26px
+20px
 )
-;
-overflow
-:
-hidden
-;
-text
--
-overflow
-:
-ellipsis
 ;
 font
 -
@@ -506,52 +724,149 @@ family
 ;
 }
 .
-network
--
-monitor
-.
 request
 -
 blocking
 -
-enable
+remove
 -
-form
-label
-.
-network
--
-monitor
-.
-request
--
-blocking
--
-list
-label
+button
 {
+/
+*
+Visually
+hide
+but
+stay
+focusable
+in
+keyboard
+navigation
+*
+/
+opacity
+:
+0
+;
+flex
+:
+none
+;
+width
+:
+20px
+;
+height
+:
+20px
+;
 margin
--
-top
+:
+0
+;
+padding
 :
 2px
 ;
+border
+:
+none
+;
+outline
+:
+none
+;
+background
+-
+color
+:
+transparent
+;
 }
 .
-network
+request
 -
-monitor
+blocking
+-
+remove
+-
+button
+:
+:
+-
+moz
+-
+focus
+-
+inner
+{
+border
+:
+none
+;
+}
 .
 request
 -
 blocking
 -
 list
+li
+:
+hover
+.
+request
+-
+blocking
+-
+remove
+-
+button
+.
+request
+-
+blocking
+-
+list
+li
+:
+focus
+-
+within
+.
+request
+-
+blocking
+-
+remove
+-
 button
 {
-visibility
+opacity
 :
-hidden
+1
+;
+}
+.
+request
+-
+blocking
+-
+remove
+-
+button
+:
+:
+before
+{
+content
+:
+"
+"
+;
+display
+:
+block
 ;
 width
 :
@@ -567,52 +882,7 @@ radius
 :
 2px
 ;
-padding
-:
-1px
-;
-margin
--
-top
-:
-3px
-;
-}
-.
-network
--
-monitor
-.
-request
--
-blocking
--
-list
-.
-devtools
--
-button
-:
-empty
-:
-:
-before
-{
-width
-:
-12px
-;
-height
-:
-12px
-;
-margin
-:
-0
-;
 background
--
-image
 :
 url
 (
@@ -632,60 +902,80 @@ close
 svg
 "
 )
+no
+-
+repeat
+center
 ;
 background
 -
 size
 :
 12px
-12px
 ;
-background
 -
-position
+moz
+-
+context
+-
+properties
 :
-0
+fill
+;
+fill
+:
+var
+(
 -
-1px
+-
+theme
+-
+icon
+-
+color
+)
 ;
 }
 .
-network
--
-monitor
-.
 request
 -
 blocking
 -
-list
-.
-devtools
+remove
 -
 button
-:
-empty
 :
 hover
-.
-network
--
-monitor
+:
+:
+before
 .
 request
 -
 blocking
 -
-list
-.
-devtools
+remove
 -
 button
 :
-empty
-:
 focus
+:
+:
+before
 {
+fill
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
+;
 background
 -
 color
@@ -700,83 +990,6 @@ selection
 -
 background
 )
-!
-important
-;
-}
-.
-network
--
-monitor
-.
-request
--
-blocking
--
-list
-button
-:
-hover
-:
-:
-before
-.
-network
--
-monitor
-.
-request
--
-blocking
--
-list
-button
-:
-focus
-:
-:
-before
-{
-fill
-:
-#
-fff
-;
-}
-.
-network
--
-monitor
-.
-request
--
-blocking
--
-list
-li
-:
-hover
-button
-.
-network
--
-monitor
-.
-request
--
-blocking
--
-list
-li
-:
-focus
--
-within
-button
-{
-visibility
-:
-visible
 ;
 }
 /
@@ -809,6 +1022,70 @@ blocking
 add
 -
 form
+{
+border
+-
+top
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+}
+.
+request
+-
+blocking
+-
+add
+-
+form
+:
+first
+-
+child
+{
+border
+-
+top
+:
+none
+;
+}
+.
+request
+-
+blocking
+-
+add
+-
+form
 input
 .
 request
@@ -830,30 +1107,25 @@ calc
 1px
 )
 ;
-padding
--
-top
+height
 :
-4px
+24px
 ;
 padding
 -
-bottom
+block
 :
 4px
-;
-background
--
-image
-:
-none
 ;
 padding
 -
 inline
--
-start
 :
-29px
+20px
+8px
+;
+background
+:
+none
 ;
 }
